--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,19 +1,19 @@
 {
   "dependencies": {
-    "com.unity.adaptiveperformance": "3.0.0",
-    "com.unity.adaptiveperformance.samsung.android": "3.0.0",
-    "com.unity.collab-proxy": "1.15.4",
+    "com.unity.adaptiveperformance": "4.0.0",
+    "com.unity.adaptiveperformance.samsung.android": "4.0.0",
+    "com.unity.collab-proxy": "1.15.16",
     "com.unity.feature.2d": "1.0.0",
     "com.unity.feature.mobile": "1.0.0",
-    "com.unity.ide.rider": "3.0.7",
-    "com.unity.ide.visualstudio": "2.0.12",
-    "com.unity.ide.vscode": "1.2.4",
+    "com.unity.ide.rider": "3.0.13",
+    "com.unity.ide.visualstudio": "2.0.15",
+    "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.2.0",
-    "com.unity.test-framework": "1.1.30",
+    "com.unity.test-framework": "2.0.1-pre.18",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.6.3",
+    "com.unity.timeline": "1.7.1",
     "com.unity.ugui": "1.0.0",
-    "com.unity.visualscripting": "1.7.6",
+    "com.unity.visualscripting": "1.7.7",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
@@ -44,6 +44,7 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0"
+    "com.unity.modules.xr": "1.0.0",
+    "com.unity.nuget.newtonsoft-json": "3.0.1"
   }
 }
