--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -8,7 +8,8 @@
     "com.unity.ide.rider": "3.0.13",
     "com.unity.ide.visualstudio": "2.0.15",
     "com.unity.ide.vscode": "1.2.5",
-    "com.unity.inputsystem": "1.2.0",
+    "com.unity.inputsystem": "1.3.0",
+    "com.unity.nuget.newtonsoft-json": "3.0.1",
     "com.unity.test-framework": "2.0.1-pre.18",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.1",
@@ -44,7 +45,6 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0",
-    "com.unity.nuget.newtonsoft-json": "3.0.1"
+    "com.unity.modules.xr": "1.0.0"
   }
 }
